[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-reflection"
version = "0.1.0"
description = "Exploitive poker hand review primitives for live home games"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.optional-dependencies]
ui = ["streamlit>=1.32"]